Updated to use TensorFlow.js rather than Keras.js, and fixed a UI bug.

--- a/MushroomClassification.ipynb
+++ b/MushroomClassification.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# WhichShroom\n",
-    "Here, a simple neural network using Keras is used to get accurate prediction weights to be used in a Javascript web application for predicting mushroom toxicity."
+    "Here, I've put together a simple neural network in Keras to predict mushroom toxicity given a small set of features. The resulting trained model will be used directly in a web page via Javascript for a lightweight application for that'll interactively judge your mushrooms."
    ]
   },
   {
@@ -24,6 +24,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -36,7 +38,9 @@
     "from keras.layers import Activation, Dense\n",
     "from keras.models import Sequential\n",
     "\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import tensorflowjs as tfjs"
    ]
   },
   {
@@ -259,7 +263,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/MushroomClassification/mushrooms.csv\")\n",
+    "df = pd.read_csv(\"mushrooms.csv\")\n",
     "\n",
     "df.head()"
    ]
@@ -310,13 +314,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While I originally trained this network on all 22 of these features, I saw two factors that directed me to shorten the feature list:\n",
-    "* The network was training to 100% accuracy in very few epochs.\n",
-    "* The number of features would be cumbersome for users to input.\n",
+    "Originally, I'd trained this network on all 22 of these features, but two factors directed me to reduce the number of features used:\n",
+    "* The network rapidly trained to 100% accuracy.\n",
+    " * That told me there was a possibility of reducing features while retaining accuracy.\n",
+    "* The average user would have a hard time supplying all 22 features.\n",
+    " * Not only would the number of features make it difficult, but also some, like gill size, are hard to assess.\n",
+    " * For use in the field, input would need to be as streamlined as possible without sacrificing accuracy substantially.\n",
     "\n",
-    "So, the following steps work to shorten the feature list, to capitalize on the degree of accuracy and to make a more friendly client-side.\n",
-    "\n",
-    "The following was review for all 22 features to determine those with the most substantial impact on classification. However, I have only included two here as examples in order to facilitate readability."
+    "So, I shortened the feature list. For brevity, The below gives an example of the analysis process that helped me to determine what of the 22 features had the most substantial impact on classification."
    ]
   },
   {
@@ -469,7 +474,7 @@
     "* population\n",
     "* habitat\n",
     "\n",
-    "However, my intention is to select an even smaller set of features, ones that would be easy for end users to select for using the network's results. You'll thus see this list shortened further in the preprocessing below"
+    "Now, knowing these to be the most important features, I wanted to make one further reduction to the list, based solely on usability. And that's what I did -- after some thought, I landed on a set of five core features, and, below, I trained the model on these."
    ]
   },
   {
@@ -630,7 +635,27 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0330 09:47:19.758305 4594550208 deprecation.py:323] From /anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "model = Sequential()\n",
     "\n",
@@ -660,12 +685,32 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /anaconda3/lib/python3.6/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0330 09:48:00.111693 4594550208 deprecation.py:323] From /anaconda3/lib/python3.6/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1a16154f98>"
+       "<keras.callbacks.History at 0x1a2a76acf8>"
       ]
      },
      "execution_count": 12,
@@ -686,7 +731,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1625/1625 [==============================] - 0s 38us/step\n"
+      "1625/1625 [==============================] - 0s 90us/step\n"
      ]
     }
    ],
@@ -703,7 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acc: 98.03\n"
+      "acc: 98.15\n"
      ]
     }
    ],
@@ -715,7 +760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, reducing the model to (effectively) five features only reduced its accuracy by ~3%. For the degree of usability this change adds, the reduction seems worthwhile."
+    "Reducing the model down to five features seems only to have dropped its accuracy by ~2%. Considering the increased usability, I thought the choice was worthwhile."
    ]
   },
   {
@@ -726,19 +771,23 @@
    },
    "outputs": [],
    "source": [
-    "model.save(\"MushroomClassification.h5\")\n",
-    "with open(\"MushroomClassification.json\", \"w\") as file:\n",
+    "tfjs.converters.save_keras_model(model, \"data/MushroomClassification\")\n",
+    "\n",
+    "model.save(\"data/MushroomClassification.h5\")\n",
+    "with open(\"data/MushroomClassification.json\", \"w\") as file:\n",
     "    file.write(model.to_json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Optional step to save the model's trained weights and biases in CSV format.\n",
+    "\n",
     "final_weights = model.get_weights()[0]\n",
     "final_biases = model.get_weights()[1]\n",
     "\n",
@@ -763,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
